fix: noscript tag alignment

--- a/public/index.css
+++ b/public/index.css
@@ -21,7 +21,7 @@ body {
   z-index: 10;
 }
 
-#rodo-loading-content {
+.rodo-loading-content {
   position: absolute;
   top: 50%;
   left: 50%;
